// Vitest Snapshot v1

exports[`<ReferenceDetailHeader/> > should render 1`] = `
<ViewHeader
  title="baz"
>
  <styled.h1>
    baz
    <styled.div>
      <ReferenceDetailHeaderIcon
        canModify={true}
        isRemote={true}
        onEdit={[MockFunction spy]}
      />
    </styled.div>
  </styled.h1>
  <Styled(Styled(UnstyledAttribution))
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeader/> > should render when [showIcons=false] 1`] = `
<ViewHeader
  title="baz"
>
  <styled.h1>
    baz
  </styled.h1>
  <Styled(Styled(UnstyledAttribution))
    time="foo"
    user={1}
  />
</ViewHeader>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render 1`] = `
<Icon
  color="grey"
  faStyle="fas"
  fixedWidth={false}
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [both canModify=false, isRemote=false] 1`] = `""`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [canModify=false] 1`] = `
<Icon
  color="grey"
  faStyle="fas"
  fixedWidth={false}
  name="lock"
/>
`;

exports[`<ReferenceDetailHeaderIcon /> > should render when [isRemote=false] 1`] = `
<Icon
  color="orange"
  faStyle="fas"
  fixedWidth={false}
  name="pencil-alt"
  onClick={[MockFunction spy]}
  tip="Edit"
/>
`;
